30-tools/matomo/prd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matomo-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/x-forwarded-proto: "$scheme"
spec:
  ingressClassName: nginx
  rules:
    - host: matomo.check-consulting.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: matomo
                port:
                  number: 80
  tls:
    - hosts:
        - matomo.check-consulting.net
      secretName: matomo.check-consulting.net.tls
